# tingshu

./: .gitignore  README.md  index.html  inference.ipynb  pyproject.toml
resources/leijun/: leijun.txt  reference.txt
resources/leijun/books/: 003-第一章-奇迹时代-梦想落地.txt  004-第二章-低谷.txt  005-第三章-重回增长.txt  006-第四章-新十年新征程.txt
scripts/: download_weights.sh  generate_web_data.sh  inference.sh  install.sh  run_gradio.sh  run_post_api.sh  run_post_server.sh
src/: train.py
src/configs/: base.yaml  firefly_gan_vq.yaml  text2semantic_finetune.yaml
src/configs/lora/: r_8_alpha_16.yaml
src/datasets/: semantic.py  vqgan.py
src/i18n/: core.py  scan.py
src/models/text2semantic/: lit_module.py  llama.py
src/text/: spliter.py
src/text/chn_text_norm/: basic_class.py  basic_util.py  cardinal.py  date.py  digit.py  fraction.py  money.py  percentage.py  telephone.py  text.py
src/utils/: logging_utils.py  rich_utils.py
src/webui/: launch_utils.py  manage.py
src/webui/html/: footer.html
tools/: api.py  generate_web_data.py  inference.py  webui.py
tools/llama/: build_dataset.py  eval_in_context.py  generate.py  merge_lora.py  quantize.py
tools/vqgan/: extract_vq.py  inference.py
web/: book.html  index.html
web/info/: jobs.json  leijun.json
web/resources/leijun/: info.json
web/resources/leijun/books/: 001-前言.txt  002-第一部分-小米创业历程.txt  003-第一章-奇迹时代-梦想落地.txt  004-第二章-低谷.txt  005-第三章-重回增长.txt  006-第四章-新十年新征程.txt  007-第二部分-小米方法论.txt  008-第五章-我对互联网的理解.txt  009-第六章-互联网七字诀.txt  010-第三部分-小米方法论的实践.txt  011-第七章-技术为本.txt  012-第八章-和用户交朋友.txt  013-第九章-爆品模式.txt  014-高效率模型.txt  (+9 more)
