[project]
name = "tingshu"
version = "0.1.0"
description = "Tingshu TTS System"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["TTS", "Speech", "Voice clone"]
license = {text = "CC BY-NC-SA 4.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy<=1.26.4",
    "transformers>=4.35.2",
    "datasets==2.18.0",
    "lightning>=2.1.0",
    "hydra-core>=1.3.2",
    "tensorboard>=2.14.1",
    "natsort>=8.4.0",
    "einops>=0.7.0",
    "librosa>=0.10.1",
    "rich>=13.5.3",
    "gradio>5.0.0",
    "wandb>=0.15.11",
    "grpcio>=1.58.0",
    "kui>=1.6.0",
    "uvicorn>=0.30.0",
    "loguru>=0.6.0",
    "loralib>=0.1.2",
    "pyrootutils>=1.0.4",
    "vector_quantize_pytorch>=1.14.24",
    "resampy>=0.4.3",
    "einx[torch]==0.2.2",
    "zstandard>=0.22.0",
    "pydub>=0.25.1",
    "pyaudio>=0.2.11",
    "faster_whisper>=0.1",
    "modelscope==1.17.1",
    "funasr==1.1.5",
    "opencc-python-reimplemented==0.1.7",
    "silero-vad>=0.4.1",
    "ormsgpack>=0.6.0",
]

[project.optional-dependencies]
stable = [
    "torch<=2.4.1",
    "torchaudio==2.4.1",
]

[build-system]
requires = ["setuptools>=42", "setuptools-scm>=6.0"]
build-backend = "setuptools.build_meta"
